--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -69,12 +69,13 @@
         <div class="subheading mb-5">7500 Monarch Mills Way · Columbia, MD 21046 
           <a href="mailto:name@email.com">slee86@umd.edu</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am an experienced Software Developer and Engineer who have been working in multiple projects from well known companies with agile software development
+        </p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/yeopdodo86">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
@@ -95,45 +96,56 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Software Development Engineer</h3>
+            <div class="subheading mb-3">Fannie Mae</div>
+            <!-- <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p> -->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <!-- <span class="text-primary">March 2013 - Present</span> -->
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Software Developer</h3>
+            <div class="subheading mb-3">Northrop Grumman/Social Security Administration</div>
+            <!-- <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p> -->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <!-- <span class="text-primary">December 2011 - March 2013</span> -->
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Software Developer</h3>
+            <div class="subheading mb-3">Agnik</div>
+            <!-- <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p> -->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <!-- <span class="text-primary">July 2010 - December 2011</span> -->
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">IT Technology Support</h3>
+            <div class="subheading mb-3">K&K Wholesaler</div>
+            <!-- <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p> -->
+          </div>
+          <div class="resume-date text-md-right">
+            <!-- <span class="text-primary">September 2008 - June 2010</span> -->
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Freelancer Software Developer</h3>
+            <div class="subheading mb-3">Freelancer</div>
+            <!-- <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p> -->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <!-- <span class="text-primary">September 2008 - June 2010</span> -->
           </div>
         </div>
 
@@ -149,17 +161,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
+            <h3 class="mb-0">University of Maryland, College Park </h3>
             <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <div>Computer Science / Mathematics</div>
+            <!-- <p>GPA: 3.23</p> -->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <!-- <span class="text-primary">August 2006 - May 2010</span> -->
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">James Buchanan High School</h3>
             <div class="subheading mb-3">Technology Magnet Program</div>
@@ -168,7 +180,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2002 - May 2006</span>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section>
@@ -179,7 +191,8 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3">Web Application Development: multiple programming languages, frameworks and libraries such as Java, Spring, C#, ASP.net, Python, Django, Flask, Javascript, Node.JS, React.JS, Angular.js, Gatzby.Js, GraphQL, Ruby, Ruby on Rails, php, HTML, CSS, SASS, CMS</div>
+        <div class="subheading mb-3">Data Analysis, Python, Machine Learning, Algorithm, SAS, Statistics, Hadoop, Spark, Scala, SQL, NOSQL, Matlab, C, C++, Go, OCaml, Git, SVN, Jenkins, Selenium, Go, Mobile Application Development, Desktop Application Development</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
@@ -242,14 +255,14 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>I am interested in learning about new technology and like to solve challenging problems. I believe that software can be a beneficial and an efficient tool when it comes to solving real world problems. I want to be a person who can give good influences to our society with my software application.
+        </p>
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
@@ -281,7 +294,7 @@
             Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
@@ -294,6 +307,19 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/resume.min.js"></script>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+
+  <script>
+    window.sr = ScrollReveal();
+    sr.reveal('#about', {
+      duration: 2000,
+      origin:'bottom',
+      distance:'200px'
+
+    });
+   
+</script>
+
 
 </body>
 
